--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.12.1",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.13.3"
+    "sequelize": "^4.13.3",
+    "tone": "^0.11.11"
   }
 }
