--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.13.3",
+    "socket.io": "^2.0.4",
     "tone": "^0.11.11"
   }
 }
