--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Edgardo Molina",
   "license": "ISC",
   "devDependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "jest": "^21.2.1"
   },
