--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^21.2.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
     "nodemon": "^1.12.1",
