--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   "author": "Edgardo Molina",
   "license": "ISC",
   "devDependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "jest": "^21.2.1"
   },
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
     "nodemon": "^1.12.1",
-    "passport": "0.4.0",
-    "passport-local": "1.0.0",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.13.3",
