--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "nodemon": "^1.12.1",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
