--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,6 @@
     "dialect": "postgresql"
   },
   "production": {
-  	"use_env_variable": "DATABASE_URL",
+    "use_env_variable": "DATABASE_URL"
   }
 }
