--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pg": "^7.3.0",
+    "socket.io": "^2.0.4",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.13.3",
     "tone": "^0.11.11"
