--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "pg": "^7.3.0",
-    "socket.io": "^2.0.4",
     "pg-hstore": "^2.3.2",
+    "recorder-js": "^1.0.7",
     "sequelize": "^4.13.3",
+    "socket.io": "^2.0.4",
     "tone": "^0.11.11"
   }
 }
